advanced function written, not displaying on webpage

--- a/client/index.html
+++ b/client/index.html
@@ -26,5 +26,9 @@
 
     <p id='hello-text'>Hello World!</p>
     <p id='repeat-text'></p>
+    <form>
+        <input type='text' placeholder='Enter a food'/>
+        <button id='food-list-btn'>Add to list</button>
+    </form>
 </body>
 </html>
